Fix for icon font vertical alignment problems
The Materialize Framework bumped up the icon font size to be larger than the font-size, but using the same line-height, in buttons.

--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -165,9 +165,6 @@ li.disabled {
 	}
 }
 
-//span.header-tags {
-//	float: right;
-//}
 span.list-blog-date {
 	float: right;
 }
@@ -229,6 +226,14 @@ span.badge.new::after {
 	&:hover {
 		background-color: $local-light-primary-color;
 	}
+}
+
+.btn i,
+.btn-large i,
+.btn-floating i,
+.btn-large i,
+.btn-flat i {
+	font-size: inherit;
 }
 
 i.left {
